// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`LanguageParser should parse Go fixtures correctly 1`] = `
[
  {
    "chunk_hash": "fd68edbadc1535917a1bca6848f45e93c6588249f923c24958981b6c28f2a045",
    "containerPath": "",
    "content": "import "fmt"",
    "created_at": "[TIMESTAMP]",
    "directoryDepth": 2,
    "directoryName": "fixtures",
    "directoryPath": "tests/fixtures",
    "endLine": 3,
    "exports": [],
    "filePath": "tests/fixtures/go.go",
    "git_branch": "main",
    "git_file_hash": "d25a37ea48cae56c14a949781b8f4c1281779887",
    "imports": [
      {
        "path": "fmt",
        "symbols": [],
        "type": "module",
      },
    ],
    "kind": "import_declaration",
    "language": "go",
    "semantic_text": "filePath: tests/fixtures/go.go
directoryPath: tests/fixtures
kind: import_declaration

import "fmt"",
    "startLine": 3,
    "symbols": [],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "0c01bc050a86f2516932d9c238e35e968f09510f2fa933e224bc9e66e4a3781c",
    "containerPath": "",
    "content": "// Hello is a function that prints a greeting.",
    "created_at": "[TIMESTAMP]",
    "directoryDepth": 2,
    "directoryName": "fixtures",
    "directoryPath": "tests/fixtures",
    "endLine": 5,
    "exports": [],
    "filePath": "tests/fixtures/go.go",
    "git_branch": "main",
    "git_file_hash": "d25a37ea48cae56c14a949781b8f4c1281779887",
    "imports": [],
    "kind": "comment",
    "language": "go",
    "semantic_text": "filePath: tests/fixtures/go.go
directoryPath: tests/fixtures
kind: comment

// Hello is a function that prints a greeting.",
    "startLine": 5,
    "symbols": [],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "381515bf0dd48f63c690606252b0806e51290234703b9dcbf7c034753fa96704",
    "containerPath": "",
    "content": "func Hello() {
	fmt.Println("Hello, Go!")
}",
    "created_at": "[TIMESTAMP]",
    "directoryDepth": 2,
    "directoryName": "fixtures",
    "directoryPath": "tests/fixtures",
    "endLine": 8,
    "exports": [
      {
        "name": "Hello",
        "type": "named",
      },
    ],
    "filePath": "tests/fixtures/go.go",
    "git_branch": "main",
    "git_file_hash": "d25a37ea48cae56c14a949781b8f4c1281779887",
    "imports": [],
    "kind": "function_declaration",
    "language": "go",
    "semantic_text": "filePath: tests/fixtures/go.go
directoryPath: tests/fixtures
kind: function_declaration

func Hello() {
	fmt.Println("Hello, Go!")
}",
    "startLine": 6,
    "symbols": [
      {
        "kind": "function.name",
        "line": 6,
        "name": "Hello",
      },
      {
        "kind": "method.call",
        "line": 7,
        "name": "fmt.Println",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "60182a39609bfe8bdda418af2ef400cdd9f97a08d48122566e1f760112d05b8d",
    "containerPath": "",
    "content": "fmt.Println("Hello, Go!")",
    "created_at": "[TIMESTAMP]",
    "directoryDepth": 2,
    "directoryName": "fixtures",
    "directoryPath": "tests/fixtures",
    "endLine": 7,
    "exports": [],
    "filePath": "tests/fixtures/go.go",
    "git_branch": "main",
    "git_file_hash": "d25a37ea48cae56c14a949781b8f4c1281779887",
    "imports": [],
    "kind": "call_expression",
    "language": "go",
    "semantic_text": "filePath: tests/fixtures/go.go
directoryPath: tests/fixtures
kind: call_expression

fmt.Println("Hello, Go!")",
    "startLine": 7,
    "symbols": [
      {
        "kind": "method.call",
        "line": 7,
        "name": "fmt.Println",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "125de83243a2f4cb0869d974cf82881c1ea38b53de65ce3c8cf597555e74b6ac",
    "containerPath": "",
    "content": "type MyType struct {
    name string
}",
    "created_at": "[TIMESTAMP]",
    "directoryDepth": 2,
    "directoryName": "fixtures",
    "directoryPath": "tests/fixtures",
    "endLine": 12,
    "exports": [
      {
        "name": "MyType",
        "type": "named",
      },
    ],
    "filePath": "tests/fixtures/go.go",
    "git_branch": "main",
    "git_file_hash": "d25a37ea48cae56c14a949781b8f4c1281779887",
    "imports": [],
    "kind": "type_declaration",
    "language": "go",
    "semantic_text": "filePath: tests/fixtures/go.go
directoryPath: tests/fixtures
kind: type_declaration

type MyType struct {
    name string
}",
    "startLine": 10,
    "symbols": [
      {
        "kind": "type.name",
        "line": 10,
        "name": "MyType",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "524f208577d30407883ed6d141b05a0779c5eea7b3412a92d5e2f0eed0be79de",
    "containerPath": "",
    "content": "const MyConst = 42",
    "created_at": "[TIMESTAMP]",
    "directoryDepth": 2,
    "directoryName": "fixtures",
    "directoryPath": "tests/fixtures",
    "endLine": 14,
    "exports": [
      {
        "name": "MyConst",
        "type": "named",
      },
    ],
    "filePath": "tests/fixtures/go.go",
    "git_branch": "main",
    "git_file_hash": "d25a37ea48cae56c14a949781b8f4c1281779887",
    "imports": [],
    "kind": "const_declaration",
    "language": "go",
    "semantic_text": "filePath: tests/fixtures/go.go
directoryPath: tests/fixtures
kind: const_declaration

const MyConst = 42",
    "startLine": 14,
    "symbols": [],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "e2d901d7cca13ca757edc02cfcaf2c5675fac6e1c10881e6294806d34a888983",
    "containerPath": "",
    "content": "func privateFunc() {
	fmt.Println("private")
}",
    "created_at": "[TIMESTAMP]",
    "directoryDepth": 2,
    "directoryName": "fixtures",
    "directoryPath": "tests/fixtures",
    "endLine": 18,
    "exports": [],
    "filePath": "tests/fixtures/go.go",
    "git_branch": "main",
    "git_file_hash": "d25a37ea48cae56c14a949781b8f4c1281779887",
    "imports": [],
    "kind": "function_declaration",
    "language": "go",
    "semantic_text": "filePath: tests/fixtures/go.go
directoryPath: tests/fixtures
kind: function_declaration

func privateFunc() {
	fmt.Println("private")
}",
    "startLine": 16,
    "symbols": [
      {
        "kind": "function.name",
        "line": 16,
        "name": "privateFunc",
      },
      {
        "kind": "method.call",
        "line": 17,
        "name": "fmt.Println",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "dbb43fffe413a3411b9f0ad27db07f606830f0bd6c3fe807c5fda0d27706afde",
    "containerPath": "",
    "content": "fmt.Println("private")",
    "created_at": "[TIMESTAMP]",
    "directoryDepth": 2,
    "directoryName": "fixtures",
    "directoryPath": "tests/fixtures",
    "endLine": 17,
    "exports": [],
    "filePath": "tests/fixtures/go.go",
    "git_branch": "main",
    "git_file_hash": "d25a37ea48cae56c14a949781b8f4c1281779887",
    "imports": [],
    "kind": "call_expression",
    "language": "go",
    "semantic_text": "filePath: tests/fixtures/go.go
directoryPath: tests/fixtures
kind: call_expression

fmt.Println("private")",
    "startLine": 17,
    "symbols": [
      {
        "kind": "method.call",
        "line": 17,
        "name": "fmt.Println",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
]
`;

exports[`LanguageParser should parse Gradle fixtures correctly 1`] = `
[
  {
    "chunk_hash": "14110e05d784ac5713d3433f9a03b2b56b8d57dbacea269ac848ac5e89f43672",
    "content": "// This is a gradle file
apply plugin: 'java'
",
    "created_at": "[TIMESTAMP]",
    "directoryDepth": 2,
    "directoryName": "fixtures",
    "directoryPath": "tests/fixtures",
    "endLine": 3,
    "filePath": "tests/fixtures/gradle.gradle",
    "git_branch": "main",
    "git_file_hash": "117a9e843f104c412bb5b4aaac1cd1b4dc931959",
    "language": "text",
    "semantic_text": "filePath: tests/fixtures/gradle.gradle
directoryPath: tests/fixtures

// This is a gradle file
apply plugin: 'java'
",
    "startLine": 1,
    "type": "doc",
    "updated_at": "[TIMESTAMP]",
  },
]
`;

exports[`LanguageParser should parse Handlebars fixtures correctly 1`] = `
[
  {
    "chunk_hash": "61df66d98e9a0be833927914091c3502e00208e6c255dbbc7431f219b8231806",
    "content": "{{! This is a comprehensive Handlebars test fixture }}

{{! Original user example - YAML with Handlebars }}
metricsets: ["broker"]
hosts:
{{#each hosts}}
  - {{this}}
{{/each}}
path: {{path}}
period: {{period}}
username: {{username}}
password: {{password}}
tags:
{{#each tags as |tag|}}
  - {{tag}}
{{/each}}
{{#if ssl}}
{{ssl}}
{{/if}}
{{#if processors}}
processors:
{{processors}}
{{/if}}

{{! Simple mustache expressions }}
<div class="user">
  <h1>{{title}}</h1>
  <p>Welcome, {{userName}}!</p>
  <p>Email: {{email}}</p>
</div>

{{! Block helpers - if/else }}
{{#if isActive}}
  <span class="active">Active User</span>
{{else}}
  <span class="inactive">Inactive User</span>
{{/if}}

{{! Block helpers - unless }}
{{#unless isGuest}}
  <button>Edit Profile</button>
{{/unless}}

{{! Block helpers - with }}
{{#with user}}
  <p>Name: {{firstName}} {{lastName}}</p>
  <p>Age: {{age}}</p>
{{/with}}

{{! Nested blocks }}
{{#if hasPermissions}}
  {{#each permissions as |permission|}}
    <li>{{permission.name}}: {{permission.level}}</li>
  {{/each}}
{{/if}}

{{! Block parameters }}
{{#each items as |item index|}}
  <div data-index="{{index}}">
    {{item.name}} - {{item.price}}
  </div>
{{/each}}

{{! Partials }}
{{> header}}
{{> userProfile user=currentUser}}
{{> footer}}

{{! Path expressions }}
<p>{{user.profile.address.city}}</p>
<p>{{../parentContext}}</p>

{{! Helper with arguments }}
{{formatDate createdAt "YYYY-MM-DD"}}
{{capitalize userName}}

",
    "created_at": "[TIMESTAMP]",
    "directoryDepth": 2,
    "directoryName": "fixtures",
    "directoryPath": "tests/fixtures",
    "endLine": 77,
    "filePath": "tests/fixtures/handlebars.hbs",
    "git_branch": "main",
    "git_file_hash": "b995d509148672a617312f7e94fe3909d6a7ba4d",
    "language": "handlebars",
    "semantic_text": "filePath: tests/fixtures/handlebars.hbs
directoryPath: tests/fixtures

{{! This is a comprehensive Handlebars test fixture }}

{{! Original user example - YAML with Handlebars }}
metricsets: ["broker"]
hosts:
{{#each hosts}}
  - {{this}}
{{/each}}
path: {{path}}
period: {{period}}
username: {{username}}
password: {{password}}
tags:
{{#each tags as |tag|}}
  - {{tag}}
{{/each}}
{{#if ssl}}
{{ssl}}
{{/if}}
{{#if processors}}
processors:
{{processors}}
{{/if}}

{{! Simple mustache expressions }}
<div class="user">
  <h1>{{title}}</h1>
  <p>Welcome, {{userName}}!</p>
  <p>Email: {{email}}</p>
</div>

{{! Block helpers - if/else }}
{{#if isActive}}
  <span class="active">Active User</span>
{{else}}
  <span class="inactive">Inactive User</span>
{{/if}}

{{! Block helpers - unless }}
{{#unless isGuest}}
  <button>Edit Profile</button>
{{/unless}}

{{! Block helpers - with }}
{{#with user}}
  <p>Name: {{firstName}} {{lastName}}</p>
  <p>Age: {{age}}</p>
{{/with}}

{{! Nested blocks }}
{{#if hasPermissions}}
  {{#each permissions as |permission|}}
    <li>{{permission.name}}: {{permission.level}}</li>
  {{/each}}
{{/if}}

{{! Block parameters }}
{{#each items as |item index|}}
  <div data-index="{{index}}">
    {{item.name}} - {{item.price}}
  </div>
{{/each}}

{{! Partials }}
{{> header}}
{{> userProfile user=currentUser}}
{{> footer}}

{{! Path expressions }}
<p>{{user.profile.address.city}}</p>
<p>{{../parentContext}}</p>

{{! Helper with arguments }}
{{formatDate createdAt "YYYY-MM-DD"}}
{{capitalize userName}}

",
    "startLine": 1,
    "type": "doc",
    "updated_at": "[TIMESTAMP]",
  },
]
`;

exports[`LanguageParser should parse JSON fixtures correctly 1`] = `
[
  {
    "chunk_hash": "b594d03aef54d63a6a43c1d54061091758fd16e6d8d4c26fb6c740ee8729f717",
    "content": "{
  "name": "code-indexer",
  "version": "1.0.0",
  "description": "A tool to index codebases for semantic search.",
  "main": "dist/index.js",
  "scripts": {
    "start": "ts-node src/index.ts",
    "build": "tsc",
    "test": "jest"
  },
  "keywords": [
    "code",
    "indexer",
    "semantic",
    "search"",
    "created_at": "[TIMESTAMP]",
    "directoryDepth": 2,
    "directoryName": "fixtures",
    "directoryPath": "tests/fixtures",
    "endLine": 15,
    "filePath": "tests/fixtures/json.json",
    "git_branch": "main",
    "git_file_hash": "4ad6f3dbdbc9446975f8757d8116a5ab3b631142",
    "language": "json",
    "semantic_text": "filePath: tests/fixtures/json.json
directoryPath: tests/fixtures

{
  "name": "code-indexer",
  "version": "1.0.0",
  "description": "A tool to index codebases for semantic search.",
  "main": "dist/index.js",
  "scripts": {
    "start": "ts-node src/index.ts",
    "build": "tsc",
    "test": "jest"
  },
  "keywords": [
    "code",
    "indexer",
    "semantic",
    "search"",
    "startLine": 1,
    "type": "doc",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "9b4196e8baade3c8b606ac3e0e994e3f95fb9551b0c00f55aaaf6a11010849cd",
    "content": "    "indexer",
    "semantic",
    "search"
  ],
  "author": "Your Name",
  "license": "ISC",
  "dependencies": {
    "elasticsearch": "^16.7.2",
    "glob": "^7.2.0",
    "tree-sitter-javascript": "^0.19.0"
  },
  "devDependencies": {
    "@types/jest": "^27.0.3",
    "jest": "^27.4.5",
    "ts-jest": "^27.1.2",",
    "created_at": "[TIMESTAMP]",
    "directoryDepth": 2,
    "directoryName": "fixtures",
    "directoryPath": "tests/fixtures",
    "endLine": 27,
    "filePath": "tests/fixtures/json.json",
    "git_branch": "main",
    "git_file_hash": "4ad6f3dbdbc9446975f8757d8116a5ab3b631142",
    "language": "json",
    "semantic_text": "filePath: tests/fixtures/json.json
directoryPath: tests/fixtures

    "indexer",
    "semantic",
    "search"
  ],
  "author": "Your Name",
  "license": "ISC",
  "dependencies": {
    "elasticsearch": "^16.7.2",
    "glob": "^7.2.0",
    "tree-sitter-javascript": "^0.19.0"
  },
  "devDependencies": {
    "@types/jest": "^27.0.3",
    "jest": "^27.4.5",
    "ts-jest": "^27.1.2",",
    "startLine": 13,
    "type": "doc",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "1f2abb6bd6df174eef8f7435551dd750078185559f4c3b5f9c8478021beb188b",
    "content": "    "@types/jest": "^27.0.3",
    "jest": "^27.4.5",
    "ts-jest": "^27.1.2",
    "ts-node": "^10.4.0",
    "typescript": "^4.5.4"
  }
}
",
    "created_at": "[TIMESTAMP]",
    "directoryDepth": 2,
    "directoryName": "fixtures",
    "directoryPath": "tests/fixtures",
    "endLine": 32,
    "filePath": "tests/fixtures/json.json",
    "git_branch": "main",
    "git_file_hash": "4ad6f3dbdbc9446975f8757d8116a5ab3b631142",
    "language": "json",
    "semantic_text": "filePath: tests/fixtures/json.json
directoryPath: tests/fixtures

    "@types/jest": "^27.0.3",
    "jest": "^27.4.5",
    "ts-jest": "^27.1.2",
    "ts-node": "^10.4.0",
    "typescript": "^4.5.4"
  }
}
",
    "startLine": 25,
    "type": "doc",
    "updated_at": "[TIMESTAMP]",
  },
]
`;

exports[`LanguageParser should parse Java fixtures correctly 1`] = `
[
  {
    "chunk_hash": "c7bf8cb907acb4b0d6e6fddaf47d772c5f0336e85f853a81815767441d7dff94",
    "containerPath": "",
    "content": "import java.util.List;",
    "created_at": "[TIMESTAMP]",
    "directoryDepth": 2,
    "directoryName": "fixtures",
    "directoryPath": "tests/fixtures",
    "endLine": 1,
    "exports": [],
    "filePath": "tests/fixtures/java.java",
    "git_branch": "main",
    "git_file_hash": "a828ae1b74c6e6a4766cd435d1bc8bd0c9c9dd0f",
    "imports": [
      {
        "path": "java.util.List",
        "symbols": [
          "List",
        ],
        "type": "module",
      },
    ],
    "kind": "import_declaration",
    "language": "java",
    "semantic_text": "filePath: tests/fixtures/java.java
directoryPath: tests/fixtures
kind: import_declaration

import java.util.List;",
    "startLine": 1,
    "symbols": [],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "f3bdfe085b37fa68c4ce801bf52d37873eac07cf0623510f9f1003adabc5d936",
    "containerPath": "",
    "content": "public class MyClass {
    /**
     * This is a Javadoc comment.
     */
    public void myMethod() {
        System.out.println("Hello, Java!");
    }
    
    private void privateMethod() {
        System.out.println("Private");
    }
}",
    "created_at": "[TIMESTAMP]",
    "directoryDepth": 2,
    "directoryName": "fixtures",
    "directoryPath": "tests/fixtures",
    "endLine": 14,
    "exports": [
      {
        "name": "MyClass",
        "type": "named",
      },
    ],
    "filePath": "tests/fixtures/java.java",
    "git_branch": "main",
    "git_file_hash": "a828ae1b74c6e6a4766cd435d1bc8bd0c9c9dd0f",
    "imports": [],
    "kind": "class_declaration",
    "language": "java",
    "semantic_text": "filePath: tests/fixtures/java.java
directoryPath: tests/fixtures
kind: class_declaration

public class MyClass {
    /**
     * This is a Javadoc comment.
     */
    public void myMethod() {
        System.out.println("Hello, Java!");
    }
    
    private void privateMethod() {
        System.out.println("Private");
    }
}",
    "startLine": 3,
    "symbols": [
      {
        "kind": "class.name",
        "line": 3,
        "name": "MyClass",
      },
      {
        "kind": "method.name",
        "line": 7,
        "name": "myMethod",
      },
      {
        "kind": "method.call",
        "line": 8,
        "name": "println",
      },
      {
        "kind": "method.name",
        "line": 11,
        "name": "privateMethod",
      },
      {
        "kind": "method.call",
        "line": 12,
        "name": "println",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "01fb998a1b76939bde6bbce21bbd358fe186be860339025492b71218b0248574",
    "containerPath": "MyClass",
    "content": "/**
     * This is a Javadoc comment.
     */",
    "created_at": "[TIMESTAMP]",
    "directoryDepth": 2,
    "directoryName": "fixtures",
    "directoryPath": "tests/fixtures",
    "endLine": 6,
    "exports": [],
    "filePath": "tests/fixtures/java.java",
    "git_branch": "main",
    "git_file_hash": "a828ae1b74c6e6a4766cd435d1bc8bd0c9c9dd0f",
    "imports": [],
    "kind": "block_comment",
    "language": "java",
    "semantic_text": "filePath: tests/fixtures/java.java
directoryPath: tests/fixtures
kind: block_comment
containerPath: MyClass

/**
     * This is a Javadoc comment.
     */",
    "startLine": 4,
    "symbols": [],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "0b64c9f2f3e7d8bc006ab2841e2516f7eb1752ced4fccf76b9ccf9aa4562376d",
    "containerPath": "MyClass",
    "content": "public void myMethod() {
        System.out.println("Hello, Java!");
    }",
    "created_at": "[TIMESTAMP]",
    "directoryDepth": 2,
    "directoryName": "fixtures",
    "directoryPath": "tests/fixtures",
    "endLine": 9,
    "exports": [
      {
        "name": "myMethod",
        "type": "named",
      },
    ],
    "filePath": "tests/fixtures/java.java",
    "git_branch": "main",
    "git_file_hash": "a828ae1b74c6e6a4766cd435d1bc8bd0c9c9dd0f",
    "imports": [],
    "kind": "method_declaration",
    "language": "java",
    "semantic_text": "filePath: tests/fixtures/java.java
directoryPath: tests/fixtures
kind: method_declaration
containerPath: MyClass

public void myMethod() {
        System.out.println("Hello, Java!");
    }",
    "startLine": 7,
    "symbols": [
      {
        "kind": "method.name",
        "line": 7,
        "name": "myMethod",
      },
      {
        "kind": "method.call",
        "line": 8,
        "name": "println",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "25b48812095dbae033aae31d13e0d5eeb9452351a6a95d114d73c4b5e7e134c2",
    "containerPath": "MyClass",
    "content": "private void privateMethod() {
        System.out.println("Private");
    }",
    "created_at": "[TIMESTAMP]",
    "directoryDepth": 2,
    "directoryName": "fixtures",
    "directoryPath": "tests/fixtures",
    "endLine": 13,
    "exports": [],
    "filePath": "tests/fixtures/java.java",
    "git_branch": "main",
    "git_file_hash": "a828ae1b74c6e6a4766cd435d1bc8bd0c9c9dd0f",
    "imports": [],
    "kind": "method_declaration",
    "language": "java",
    "semantic_text": "filePath: tests/fixtures/java.java
directoryPath: tests/fixtures
kind: method_declaration
containerPath: MyClass

private void privateMethod() {
        System.out.println("Private");
    }",
    "startLine": 11,
    "symbols": [
      {
        "kind": "method.name",
        "line": 11,
        "name": "privateMethod",
      },
      {
        "kind": "method.call",
        "line": 12,
        "name": "println",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
]
`;

exports[`LanguageParser should parse JavaScript fixtures correctly 1`] = `
[
  {
    "chunk_hash": "bfbce26d696921c2281b7e4c2eebed78128ac63be763d2b09fa054793a790934",
    "containerPath": "",
    "content": "// This is a comment",
    "created_at": "[TIMESTAMP]",
    "directoryDepth": 2,
    "directoryName": "fixtures",
    "directoryPath": "tests/fixtures",
    "endLine": 1,
    "exports": [],
    "filePath": "tests/fixtures/javascript.js",
    "git_branch": "main",
    "git_file_hash": "2d55abebd9ad0956aa451830fcbe714121386d2a",
    "imports": [],
    "kind": "comment",
    "language": "javascript",
    "semantic_text": "filePath: tests/fixtures/javascript.js
directoryPath: tests/fixtures
kind: comment

// This is a comment",
    "startLine": 1,
    "symbols": [],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "ed8291088a1a5a73b9864543d1ce1e9a65ff0a84fc7b2e84bb51d4394d593245",
    "containerPath": "",
    "content": "import { a } from 'b';",
    "created_at": "[TIMESTAMP]",
    "directoryDepth": 2,
    "directoryName": "fixtures",
    "directoryPath": "tests/fixtures",
    "endLine": 2,
    "exports": [],
    "filePath": "tests/fixtures/javascript.js",
    "git_branch": "main",
    "git_file_hash": "2d55abebd9ad0956aa451830fcbe714121386d2a",
    "imports": [
      {
        "path": "b",
        "symbols": [
          "a",
        ],
        "type": "module",
      },
      {
        "path": "b",
        "symbols": [],
        "type": "module",
      },
    ],
    "kind": "import_statement",
    "language": "javascript",
    "semantic_text": "filePath: tests/fixtures/javascript.js
directoryPath: tests/fixtures
kind: import_statement

import { a } from 'b';",
    "startLine": 2,
    "symbols": [],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "7879ae4ab38bdc5513c4af4a422cd870415b4e829ebd550543748ead16e0f1a4",
    "containerPath": "",
    "content": "/**
 * This is a JSDoc comment.
 */",
    "created_at": "[TIMESTAMP]",
    "directoryDepth": 2,
    "directoryName": "fixtures",
    "directoryPath": "tests/fixtures",
    "endLine": 6,
    "exports": [],
    "filePath": "tests/fixtures/javascript.js",
    "git_branch": "main",
    "git_file_hash": "2d55abebd9ad0956aa451830fcbe714121386d2a",
    "imports": [],
    "kind": "comment",
    "language": "javascript",
    "semantic_text": "filePath: tests/fixtures/javascript.js
directoryPath: tests/fixtures
kind: comment

/**
 * This is a JSDoc comment.
 */",
    "startLine": 4,
    "symbols": [],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "863f06bfe158d269234eff9d0167d4cbc6492a68f4cf705ef7a75811dc8c9ec3",
    "containerPath": "",
    "content": "function hello() {
  console.log('Hello, world!');
}",
    "created_at": "[TIMESTAMP]",
    "directoryDepth": 2,
    "directoryName": "fixtures",
    "directoryPath": "tests/fixtures",
    "endLine": 9,
    "exports": [],
    "filePath": "tests/fixtures/javascript.js",
    "git_branch": "main",
    "git_file_hash": "2d55abebd9ad0956aa451830fcbe714121386d2a",
    "imports": [],
    "kind": "function_declaration",
    "language": "javascript",
    "semantic_text": "filePath: tests/fixtures/javascript.js
directoryPath: tests/fixtures
kind: function_declaration

function hello() {
  console.log('Hello, world!');
}",
    "startLine": 7,
    "symbols": [
      {
        "kind": "function.name",
        "line": 7,
        "name": "hello",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "eee7859f1f61de3723f1e42c8bc57adeec0c651524e3c74d96583d45096b8987",
    "containerPath": "",
    "content": "console.log('Hello, world!');",
    "created_at": "[TIMESTAMP]",
    "directoryDepth": 2,
    "directoryName": "fixtures",
    "directoryPath": "tests/fixtures",
    "endLine": 8,
    "exports": [],
    "filePath": "tests/fixtures/javascript.js",
    "git_branch": "main",
    "git_file_hash": "2d55abebd9ad0956aa451830fcbe714121386d2a",
    "imports": [],
    "kind": "expression_statement",
    "language": "javascript",
    "semantic_text": "filePath: tests/fixtures/javascript.js
directoryPath: tests/fixtures
kind: expression_statement

console.log('Hello, world!');",
    "startLine": 8,
    "symbols": [],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "b8059cfb1ea623e79efbf432db31595df213c99c6534c58bec9d5f5e069344df",
    "containerPath": "",
    "content": "console.log('Hello, world!')",
    "created_at": "[TIMESTAMP]",
    "directoryDepth": 2,
    "directoryName": "fixtures",
    "directoryPath": "tests/fixtures",
    "endLine": 8,
    "exports": [],
    "filePath": "tests/fixtures/javascript.js",
    "git_branch": "main",
    "git_file_hash": "2d55abebd9ad0956aa451830fcbe714121386d2a",
    "imports": [],
    "kind": "call_expression",
    "language": "javascript",
    "semantic_text": "filePath: tests/fixtures/javascript.js
directoryPath: tests/fixtures
kind: call_expression

console.log('Hello, world!')",
    "startLine": 8,
    "symbols": [],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "6a2b8546a9fc4bcc2bec82d3f9e91e0a720e144f2c41ac8adadb75b607b5a61e",
    "containerPath": "",
    "content": "export class MyClass {
  myMethod() {
    return 1;
  }
}",
    "created_at": "[TIMESTAMP]",
    "directoryDepth": 2,
    "directoryName": "fixtures",
    "directoryPath": "tests/fixtures",
    "endLine": 15,
    "exports": [
      {
        "name": "MyClass",
        "type": "named",
      },
    ],
    "filePath": "tests/fixtures/javascript.js",
    "git_branch": "main",
    "git_file_hash": "2d55abebd9ad0956aa451830fcbe714121386d2a",
    "imports": [],
    "kind": "export_statement",
    "language": "javascript",
    "semantic_text": "filePath: tests/fixtures/javascript.js
directoryPath: tests/fixtures
kind: export_statement

export class MyClass {
  myMethod() {
    return 1;
  }
}",
    "startLine": 11,
    "symbols": [
      {
        "kind": "class.name",
        "line": 11,
        "name": "MyClass",
      },
      {
        "kind": "method.name",
        "line": 12,
        "name": "myMethod",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "6fd7f5fcd99232f0e49797bebada48669972e9c870171a3848c61eebca7f22dd",
    "containerPath": "",
    "content": "class MyClass {
  myMethod() {
    return 1;
  }
}",
    "created_at": "[TIMESTAMP]",
    "directoryDepth": 2,
    "directoryName": "fixtures",
    "directoryPath": "tests/fixtures",
    "endLine": 15,
    "exports": [
      {
        "name": "MyClass",
        "type": "named",
      },
    ],
    "filePath": "tests/fixtures/javascript.js",
    "git_branch": "main",
    "git_file_hash": "2d55abebd9ad0956aa451830fcbe714121386d2a",
    "imports": [],
    "kind": "class_declaration",
    "language": "javascript",
    "semantic_text": "filePath: tests/fixtures/javascript.js
directoryPath: tests/fixtures
kind: class_declaration

class MyClass {
  myMethod() {
    return 1;
  }
}",
    "startLine": 11,
    "symbols": [
      {
        "kind": "class.name",
        "line": 11,
        "name": "MyClass",
      },
      {
        "kind": "method.name",
        "line": 12,
        "name": "myMethod",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "4f9ff60fb6e9d9218195c5b2af2e37c126497b9dbda6838356718ce7fe4d4b7a",
    "containerPath": "MyClass",
    "content": "myMethod() {
    return 1;
  }",
    "created_at": "[TIMESTAMP]",
    "directoryDepth": 2,
    "directoryName": "fixtures",
    "directoryPath": "tests/fixtures",
    "endLine": 14,
    "exports": [],
    "filePath": "tests/fixtures/javascript.js",
    "git_branch": "main",
    "git_file_hash": "2d55abebd9ad0956aa451830fcbe714121386d2a",
    "imports": [],
    "kind": "method_definition",
    "language": "javascript",
    "semantic_text": "filePath: tests/fixtures/javascript.js
directoryPath: tests/fixtures
kind: method_definition
containerPath: MyClass

myMethod() {
    return 1;
  }",
    "startLine": 12,
    "symbols": [
      {
        "kind": "method.name",
        "line": 12,
        "name": "myMethod",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "f58b7c3af621b52a2bb7dc67d4491f9ab6c6d16e3cfa1e46e670ff4f9a301fdc",
    "containerPath": "",
    "content": "return 1;",
    "created_at": "[TIMESTAMP]",
    "directoryDepth": 2,
    "directoryName": "fixtures",
    "directoryPath": "tests/fixtures",
    "endLine": 13,
    "exports": [],
    "filePath": "tests/fixtures/javascript.js",
    "git_branch": "main",
    "git_file_hash": "2d55abebd9ad0956aa451830fcbe714121386d2a",
    "imports": [],
    "kind": "return_statement",
    "language": "javascript",
    "semantic_text": "filePath: tests/fixtures/javascript.js
directoryPath: tests/fixtures
kind: return_statement

return 1;",
    "startLine": 13,
    "symbols": [],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "4193195d714e9781a85bca9b894464e46e9283c271cf3521c47a3b28aa48a082",
    "containerPath": "",
    "content": "export const myVar = () => {};",
    "created_at": "[TIMESTAMP]",
    "directoryDepth": 2,
    "directoryName": "fixtures",
    "directoryPath": "tests/fixtures",
    "endLine": 17,
    "exports": [
      {
        "name": "myVar",
        "type": "named",
      },
    ],
    "filePath": "tests/fixtures/javascript.js",
    "git_branch": "main",
    "git_file_hash": "2d55abebd9ad0956aa451830fcbe714121386d2a",
    "imports": [],
    "kind": "export_statement",
    "language": "javascript",
    "semantic_text": "filePath: tests/fixtures/javascript.js
directoryPath: tests/fixtures
kind: export_statement

export const myVar = () => {};",
    "startLine": 17,
    "symbols": [
      {
        "kind": "variable.name",
        "line": 17,
        "name": "myVar",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "b4debc24bebfb7484ed5e08c2e47765e7b7449130b923b7c89c7079823b5c73a",
    "containerPath": "",
    "content": "const myVar = () => {};",
    "created_at": "[TIMESTAMP]",
    "directoryDepth": 2,
    "directoryName": "fixtures",
    "directoryPath": "tests/fixtures",
    "endLine": 17,
    "exports": [
      {
        "name": "myVar",
        "type": "named",
      },
    ],
    "filePath": "tests/fixtures/javascript.js",
    "git_branch": "main",
    "git_file_hash": "2d55abebd9ad0956aa451830fcbe714121386d2a",
    "imports": [],
    "kind": "lexical_declaration",
    "language": "javascript",
    "semantic_text": "filePath: tests/fixtures/javascript.js
directoryPath: tests/fixtures
kind: lexical_declaration

const myVar = () => {};",
    "startLine": 17,
    "symbols": [
      {
        "kind": "variable.name",
        "line": 17,
        "name": "myVar",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "0bd07b8f4cd16fbf1b31cc0f797e242f3c3aed6e4ef33f81c3f7eb0c2b47fb48",
    "containerPath": "",
    "content": "export function myFunction() {
  return 42;
}",
    "created_at": "[TIMESTAMP]",
    "directoryDepth": 2,
    "directoryName": "fixtures",
    "directoryPath": "tests/fixtures",
    "endLine": 21,
    "exports": [
      {
        "name": "myFunction",
        "type": "named",
      },
    ],
    "filePath": "tests/fixtures/javascript.js",
    "git_branch": "main",
    "git_file_hash": "2d55abebd9ad0956aa451830fcbe714121386d2a",
    "imports": [],
    "kind": "export_statement",
    "language": "javascript",
    "semantic_text": "filePath: tests/fixtures/javascript.js
directoryPath: tests/fixtures
kind: export_statement

export function myFunction() {
  return 42;
}",
    "startLine": 19,
    "symbols": [
      {
        "kind": "function.name",
        "line": 19,
        "name": "myFunction",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "efc1b94606ac2d3d1104dc9ed840d9abfe221f600ff381e992bf54776f9470f6",
    "containerPath": "",
    "content": "function myFunction() {
  return 42;
}",
    "created_at": "[TIMESTAMP]",
    "directoryDepth": 2,
    "directoryName": "fixtures",
    "directoryPath": "tests/fixtures",
    "endLine": 21,
    "exports": [
      {
        "name": "myFunction",
        "type": "named",
      },
    ],
    "filePath": "tests/fixtures/javascript.js",
    "git_branch": "main",
    "git_file_hash": "2d55abebd9ad0956aa451830fcbe714121386d2a",
    "imports": [],
    "kind": "function_declaration",
    "language": "javascript",
    "semantic_text": "filePath: tests/fixtures/javascript.js
directoryPath: tests/fixtures
kind: function_declaration

function myFunction() {
  return 42;
}",
    "startLine": 19,
    "symbols": [
      {
        "kind": "function.name",
        "line": 19,
        "name": "myFunction",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "6a98d35093f15c84a9ccc34b0265e824ea49910551c181a250b362448204a253",
    "containerPath": "",
    "content": "return 42;",
    "created_at": "[TIMESTAMP]",
    "directoryDepth": 2,
    "directoryName": "fixtures",
    "directoryPath": "tests/fixtures",
    "endLine": 20,
    "exports": [],
    "filePath": "tests/fixtures/javascript.js",
    "git_branch": "main",
    "git_file_hash": "2d55abebd9ad0956aa451830fcbe714121386d2a",
    "imports": [],
    "kind": "return_statement",
    "language": "javascript",
    "semantic_text": "filePath: tests/fixtures/javascript.js
directoryPath: tests/fixtures
kind: return_statement

return 42;",
    "startLine": 20,
    "symbols": [],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "1aa103d3c9f3a73b52d91ca51822c4228730d040ad4c992945db2e91d26866c0",
    "containerPath": "",
    "content": "export default MyClass;",
    "created_at": "[TIMESTAMP]",
    "directoryDepth": 2,
    "directoryName": "fixtures",
    "directoryPath": "tests/fixtures",
    "endLine": 23,
    "exports": [
      {
        "name": "MyClass",
        "type": "default",
      },
    ],
    "filePath": "tests/fixtures/javascript.js",
    "git_branch": "main",
    "git_file_hash": "2d55abebd9ad0956aa451830fcbe714121386d2a",
    "imports": [],
    "kind": "export_statement",
    "language": "javascript",
    "semantic_text": "filePath: tests/fixtures/javascript.js
directoryPath: tests/fixtures
kind: export_statement

export default MyClass;",
    "startLine": 23,
    "symbols": [],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
]
`;

exports[`LanguageParser should parse Markdown fixtures correctly 1`] = `
[
  {
    "chunk_hash": "ed09ca2736773c6ceb4e8e5499e71d1a80fd6a4a346efff7a88a2d6c3ff27274",
    "content": "# Markdown Fixture",
    "created_at": "[TIMESTAMP]",
    "directoryDepth": 2,
    "directoryName": "fixtures",
    "directoryPath": "tests/fixtures",
    "endLine": 1,
    "filePath": "tests/fixtures/markdown.md",
    "git_branch": "main",
    "git_file_hash": "897cccd1ed4fa835aedaa753ccef511d4be75898",
    "language": "markdown",
    "semantic_text": "filePath: tests/fixtures/markdown.md
directoryPath: tests/fixtures

# Markdown Fixture",
    "startLine": 1,
    "type": "doc",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "152f882642f9c50be75eeade70c1ea1e2cfbe7901db4a0a46b2f9d25159c755f",
    "content": "This is a paragraph.",
    "created_at": "[TIMESTAMP]",
    "directoryDepth": 2,
    "directoryName": "fixtures",
    "directoryPath": "tests/fixtures",
    "endLine": 3,
    "filePath": "tests/fixtures/markdown.md",
    "git_branch": "main",
    "git_file_hash": "897cccd1ed4fa835aedaa753ccef511d4be75898",
    "language": "markdown",
    "semantic_text": "filePath: tests/fixtures/markdown.md
directoryPath: tests/fixtures

This is a paragraph.",
    "startLine": 3,
    "type": "doc",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "6a71ffba5e7729a8faef7020e41476963c3a49ca90958e41ce8eb234ed005d08",
    "content": "## This is a heading",
    "created_at": "[TIMESTAMP]",
    "directoryDepth": 2,
    "directoryName": "fixtures",
    "directoryPath": "tests/fixtures",
    "endLine": 5,
    "filePath": "tests/fixtures/markdown.md",
    "git_branch": "main",
    "git_file_hash": "897cccd1ed4fa835aedaa753ccef511d4be75898",
    "language": "markdown",
    "semantic_text": "filePath: tests/fixtures/markdown.md
directoryPath: tests/fixtures

## This is a heading",
    "startLine": 5,
    "type": "doc",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "8dada63f9b5a079670e1e692f1790aa4334c5d920f6333a56d49d483eac7f42d",
    "content": "This is another paragraph.
",
    "created_at": "[TIMESTAMP]",
    "directoryDepth": 2,
    "directoryName": "fixtures",
    "directoryPath": "tests/fixtures",
    "endLine": 8,
    "filePath": "tests/fixtures/markdown.md",
    "git_branch": "main",
    "git_file_hash": "897cccd1ed4fa835aedaa753ccef511d4be75898",
    "language": "markdown",
    "semantic_text": "filePath: tests/fixtures/markdown.md
directoryPath: tests/fixtures

This is another paragraph.
",
    "startLine": 7,
    "type": "doc",
    "updated_at": "[TIMESTAMP]",
  },
]
`;

exports[`LanguageParser should parse Properties fixtures correctly 1`] = `
[
  {
    "chunk_hash": "621a201da38f18e6e3a964aa931de8dca5f29be30ca781c80145d0df560e114d",
    "containerPath": "",
    "content": "# This is a properties file",
    "created_at": "[TIMESTAMP]",
    "directoryDepth": 2,
    "directoryName": "fixtures",
    "directoryPath": "tests/fixtures",
    "endLine": 1,
    "exports": [],
    "filePath": "tests/fixtures/properties.properties",
    "git_branch": "main",
    "git_file_hash": "546ce71ae8dc740b15b5d356cf2a9b2a5c23d30a",
    "imports": [],
    "kind": "comment",
    "language": "properties",
    "semantic_text": "filePath: tests/fixtures/properties.properties
directoryPath: tests/fixtures
kind: comment

# This is a properties file",
    "startLine": 1,
    "symbols": [],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "563f0357118d05ef145d6bddf2966cc23e86ca8f2f013f915e565afdf09f7a23",
    "containerPath": "",
    "content": "key=value",
    "created_at": "[TIMESTAMP]",
    "directoryDepth": 2,
    "directoryName": "fixtures",
    "directoryPath": "tests/fixtures",
    "endLine": 2,
    "exports": [],
    "filePath": "tests/fixtures/properties.properties",
    "git_branch": "main",
    "git_file_hash": "546ce71ae8dc740b15b5d356cf2a9b2a5c23d30a",
    "imports": [],
    "kind": "property",
    "language": "properties",
    "semantic_text": "filePath: tests/fixtures/properties.properties
directoryPath: tests/fixtures
kind: property

key=value",
    "startLine": 2,
    "symbols": [
      {
        "kind": "property.key",
        "line": 2,
        "name": "key",
      },
      {
        "kind": "property.value",
        "line": 2,
        "name": "value",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
]
`;

exports[`LanguageParser should parse Python fixtures correctly 1`] = `
[
  {
    "chunk_hash": "de2abade832c8e350a1bdc98cfcdb1e202ac4749c5fc51a4a970d41736b6df5c",
    "containerPath": "",
    "content": "import os",
    "created_at": "[TIMESTAMP]",
    "directoryDepth": 2,
    "directoryName": "fixtures",
    "directoryPath": "tests/fixtures",
    "endLine": 1,
    "exports": [],
    "filePath": "tests/fixtures/python.py",
    "git_branch": "main",
    "git_file_hash": "9f937b2fd82800193eeebc82963d4147e32f9c29",
    "imports": [
      {
        "path": "os",
        "symbols": [],
        "type": "module",
      },
    ],
    "kind": "import_statement",
    "language": "python",
    "semantic_text": "filePath: tests/fixtures/python.py
directoryPath: tests/fixtures
kind: import_statement

import os",
    "startLine": 1,
    "symbols": [],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "4416cd8dd5bbde8d874fb5633b664d25cb2cf0056bb279836527e32e4dd1cf0e",
    "containerPath": "",
    "content": "class MyClass:
    def my_method(self):
        print("Hello, Python!")",
    "created_at": "[TIMESTAMP]",
    "directoryDepth": 2,
    "directoryName": "fixtures",
    "directoryPath": "tests/fixtures",
    "endLine": 5,
    "exports": [
      {
        "name": "MyClass",
        "type": "named",
      },
    ],
    "filePath": "tests/fixtures/python.py",
    "git_branch": "main",
    "git_file_hash": "9f937b2fd82800193eeebc82963d4147e32f9c29",
    "imports": [],
    "kind": "class_definition",
    "language": "python",
    "semantic_text": "filePath: tests/fixtures/python.py
directoryPath: tests/fixtures
kind: class_definition

class MyClass:
    def my_method(self):
        print("Hello, Python!")",
    "startLine": 3,
    "symbols": [
      {
        "kind": "class.name",
        "line": 3,
        "name": "MyClass",
      },
      {
        "kind": "function.name",
        "line": 4,
        "name": "my_method",
      },
      {
        "kind": "function.call",
        "line": 5,
        "name": "print",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "b8cb7ef3b47294cb6d26e1a0479dba320243ecd0cf40e6336775f3d049a1de70",
    "containerPath": "",
    "content": "def my_method(self):
        print("Hello, Python!")",
    "created_at": "[TIMESTAMP]",
    "directoryDepth": 2,
    "directoryName": "fixtures",
    "directoryPath": "tests/fixtures",
    "endLine": 5,
    "exports": [],
    "filePath": "tests/fixtures/python.py",
    "git_branch": "main",
    "git_file_hash": "9f937b2fd82800193eeebc82963d4147e32f9c29",
    "imports": [],
    "kind": "function_definition",
    "language": "python",
    "semantic_text": "filePath: tests/fixtures/python.py
directoryPath: tests/fixtures
kind: function_definition

def my_method(self):
        print("Hello, Python!")",
    "startLine": 4,
    "symbols": [
      {
        "kind": "function.name",
        "line": 4,
        "name": "my_method",
      },
      {
        "kind": "function.call",
        "line": 5,
        "name": "print",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "12bc33d9722a0828233d0d9bf5fa151caa0521f490ef4fe5ca7bcc3b6faeeaeb",
    "containerPath": "",
    "content": "print("Hello, Python!")",
    "created_at": "[TIMESTAMP]",
    "directoryDepth": 2,
    "directoryName": "fixtures",
    "directoryPath": "tests/fixtures",
    "endLine": 5,
    "exports": [],
    "filePath": "tests/fixtures/python.py",
    "git_branch": "main",
    "git_file_hash": "9f937b2fd82800193eeebc82963d4147e32f9c29",
    "imports": [],
    "kind": "call",
    "language": "python",
    "semantic_text": "filePath: tests/fixtures/python.py
directoryPath: tests/fixtures
kind: call

print("Hello, Python!")",
    "startLine": 5,
    "symbols": [
      {
        "kind": "function.call",
        "line": 5,
        "name": "print",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "affe3cd249911aca1214a479053a5c8725ff99c14663998949812c3246efe906",
    "containerPath": "",
    "content": "def my_function():
    """This is a docstring."""
    pass",
    "created_at": "[TIMESTAMP]",
    "directoryDepth": 2,
    "directoryName": "fixtures",
    "directoryPath": "tests/fixtures",
    "endLine": 9,
    "exports": [
      {
        "name": "my_function",
        "type": "named",
      },
    ],
    "filePath": "tests/fixtures/python.py",
    "git_branch": "main",
    "git_file_hash": "9f937b2fd82800193eeebc82963d4147e32f9c29",
    "imports": [],
    "kind": "function_definition",
    "language": "python",
    "semantic_text": "filePath: tests/fixtures/python.py
directoryPath: tests/fixtures
kind: function_definition

def my_function():
    """This is a docstring."""
    pass",
    "startLine": 7,
    "symbols": [
      {
        "kind": "function.name",
        "line": 7,
        "name": "my_function",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "3591cf9ebe4d74d7d64cd7ec1ca1a678d9f8b52cfc8a5995a734b417050fb00c",
    "containerPath": "",
    "content": """"This is a docstring."""",
    "created_at": "[TIMESTAMP]",
    "directoryDepth": 2,
    "directoryName": "fixtures",
    "directoryPath": "tests/fixtures",
    "endLine": 8,
    "exports": [],
    "filePath": "tests/fixtures/python.py",
    "git_branch": "main",
    "git_file_hash": "9f937b2fd82800193eeebc82963d4147e32f9c29",
    "imports": [],
    "kind": "expression_statement",
    "language": "python",
    "semantic_text": "filePath: tests/fixtures/python.py
directoryPath: tests/fixtures
kind: expression_statement

"""This is a docstring."""",
    "startLine": 8,
    "symbols": [],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
  {
    "chunk_hash": "b1a6a7b99eae748d1ea44b9d3670d6043166d95855830d8b1db7924cf86eb00d",
    "containerPath": "",
    "content": "MY_CONSTANT = 42",
    "created_at": "[TIMESTAMP]",
    "directoryDepth": 2,
    "directoryName": "fixtures",
    "directoryPath": "tests/fixtures",
    "endLine": 11,
    "exports": [
      {
        "name": "MY_CONSTANT",
        "type": "named",
      },
    ],
    "filePath": "tests/fixtures/python.py",
    "git_branch": "main",
    "git_file_hash": "9f937b2fd82800193eeebc82963d4147e32f9c29",
    "imports": [],
    "kind": "expression_statement",
    "language": "python",
    "semantic_text": "filePath: tests/fixtures/python.py
directoryPath: tests/fixtures
kind: expression_statement

MY_CONSTANT = 42",
    "startLine": 11,
    "symbols": [
      {
        "kind": "variable.name",
        "line": 11,
        "name": "MY_CONSTANT",
      },
    ],
    "type": "code",
    "updated_at": "[TIMESTAMP]",
  },
]
`;

exports[`LanguageParser should parse Text fixtures correctly 1`] = `
[
  {
    "chunk_hash": "9be104294df7d5a59c328241d49ac062e2c7b9660636e7f511e3a1dc3d919377",
    "content": "This is a text file.",
    "created_at": "[TIMESTAMP]",
    "directoryDepth": 2,
    "directoryName": "fixtures",
    "directoryPath": "tests/fixtures",
    "endLine": 1,
    "filePath": "tests/fixtures/text.txt",
    "git_branch": "main",
    "git_file_hash": "1cf9ef97c0c1e1b299d36fca0faef53a53c3c29f",
    "language": "text",
    "semantic_text": "filePath: tests/fixtures/text.txt
directoryPath: tests/fixtures

This is a text file.",
    "startLine": 1,
    "type": "doc",
    "updated_at": "[TIMESTAMP]",
  },
]
`;

exports[`LanguageParser should parse YAML fixtures correctly 1`] = `
[
  {
    "chunk_hash": "6fc1577d54d9234a3de72ea7fd5d56fb5670435ea20e2fa1aaf71646814d1138",
    "content": "document: one
pair:
  key: value
---
document: two
another_pair:
  nested_key: nested_value
",
    "created_at": "[TIMESTAMP]",
    "directoryDepth": 2,
    "directoryName": "fixtures",
    "directoryPath": "tests/fixtures",
    "endLine": 8,
    "filePath": "tests/fixtures/yaml.yml",
    "git_branch": "main",
    "git_file_hash": "e635a9db09a145f597bde1f8f5ab828c44b3134d",
    "language": "yaml",
    "semantic_text": "filePath: tests/fixtures/yaml.yml
directoryPath: tests/fixtures

document: one
pair:
  key: value
---
document: two
another_pair:
  nested_key: nested_value
",
    "startLine": 1,
    "type": "doc",
    "updated_at": "[TIMESTAMP]",
  },
]
`;
